// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Tooltip arrowVue demo works fine 1`] = `
<div>
  <div
    class="t-popup-reference"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         带箭头文字提示 
        
      </span>
    </button>
    
  </div>
</div>
`;

exports[`Tooltip Tooltip baseVue demo works fine 1`] = `
<div
  class="tdesign-tooltip-placement"
>
  <div
    class="t-popup-reference placement top center"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         top 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup-reference placement top left"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         top-left 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup-reference placement top right"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         top-right 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup-reference placement bottom center"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         bottom 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup-reference placement bottom left"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         bottom-left 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup-reference placement bottom right"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         bottom-right 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup-reference placement align"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         left 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup-reference placement top-align"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         left-top 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup-reference placement bottom-align"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         left-bottom 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup-reference placement right-full align"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         right 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup-reference placement right-full top-align"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         right-top 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup-reference placement right-full bottom-align"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         right-bottom 
        
      </span>
    </button>
    
  </div>
</div>
`;

exports[`Tooltip Tooltip durationVue demo works fine 1`] = `
<div>
  <div
    class="t-popup-reference"
    duration="5000"
    style="position: relative;"
    theme="default"
  >
    <transition-stub />
    
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-default t-is-disabled"
      disabled=""
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         定时消失 
        
      </span>
    </button>
    
    <div
      class="resize-sensor"
      dir="ltr"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        class="resize-sensor-expand"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          style="position: absolute; left: 0px; top: 0px; transition: 0s;"
        />
      </div>
      <div
        class="resize-sensor-shrink"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
        />
      </div>
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`Tooltip Tooltip noArrowVue demo works fine 1`] = `
<div>
  <div
    class="t-popup-reference"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         不带箭头的文字提示 
        
      </span>
    </button>
    
  </div>
</div>
`;

exports[`Tooltip Tooltip themeVue demo works fine 1`] = `
<div
  class="tdesign-tooltip-demo"
>
  <div
    class="t-popup-reference"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         default 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup-reference"
    duration="3000"
    theme="primary"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-primary"
        >
          文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         primary 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup-reference"
    duration="3000"
    theme="success"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-success"
        >
          文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-success"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         success 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup-reference"
    duration="3000"
    theme="danger"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-danger"
        >
          文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-danger"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         danger 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup-reference"
    duration="3000"
    theme="warning"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-warning"
        >
          文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-warning"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         warning 
        
      </span>
    </button>
    
  </div>
</div>
`;

exports[`Tooltip Tooltip triggerVue demo works fine 1`] = `
<div
  class="tdesign-tooltip-demo"
>
  <div
    class="t-popup-reference"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         悬浮时触发（默认） 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup-reference"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input t-size-m"
    >
      <!---->
      <input
        autocomplete="false"
        class="t-input__inner"
        placeholder="获得焦点时触发"
        type="text"
      />
      <!---->
    </div>
    
  </div>
  <div
    class="t-popup-reference"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         点击时触发 
        
      </span>
    </button>
    
  </div>
  <div
    class="t-popup-reference"
    duration="3000"
    theme="default"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-popup-content--arrow t-tooltip t-tooltip-default"
        >
          文字提示仅展示文本内容
          <div
            class="t-popup__arrow"
          />
        </div>
      </div>
    </transition-stub>
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         右击时触发 
        
      </span>
    </button>
    
  </div>
</div>
`;
